<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Activity headers strings -->
    <string name="app_name">weCharade</string>
    <string name="menu">Menu</string>
    <string name="login">Login</string>
    <string name="game">Let\'s play</string>
    <string name="title_activity_game">Game</string>
    <string name="invitations">Invitations</string>
    <string name="register">Register</string>

    <!-- Login and registration screen strings -->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="email">Email</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="not_registered">Not registered?</string>
    <string name="registered">Already registered?</string>
    <string name="resetPassword">Reset password</string>
    <string name="newPassword">Send me a new password</string>

    <!-- Start screen strings -->
    <string name="new_game">New game</string>
    <string name="account">Account</string>
    <string name="logout">Logout</string>

    <!-- Search screen strings -->
    <string name="random">Find random player</string>
    <string name="facebook">Find through Facebook</string>
    <string name="player">Find player</string>
    <string name="search">Search</string>
    <string name="search_player">Find player</string>
    <string name="search_hint">Enter username</string>
    <string name="search_result">Search result</string>
    <string name="play">Play</string>
    <string name="empty_list">No results found!</string>

    <!-- Invitations screen strings -->
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>

    <!-- Account screen strings -->
    <string name="instructions">Instructions</string>
    <string name="globalRanking">Global ranking</string>
    <string name="playedGames">Played games</string>
    <string name="wonGames">Wins</string>
    <string name="lostGames">Losses</string>
    <string name="drawGames">Draws</string>
	
    <!-- Game screen strings -->
    <string name="recordVideo">Record video</string>
    <string name="satisfiedText">Satisfied with video?</string>
    <string name="yourScore">Your score</string>
    <string name="opponentScore">Opponent\'s score</string>
    <string name="makeGuess">Make a guess!</string>
    <string name="charadeWord">Your charade word</string>
    
    <!-- Other strings -->
    <string name="action_settings">Settings</string>
    <string name="topTenCharaders">Top charaders</string>
    <string name="ok">OK</string>
    <string name="errorTitle">Error!</string>
    <string name="successTitle">Success!</string>
    <string name="quit">Quit</string>
    <string name="about">About</string>
    <string name="gameInstructionsTitle">Game instructions</string>
    <string name="gameInstructionsSubtitle">Become a Charade Master</string>
    

</resources>