<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/username"
            style="@style/text_large"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp" />

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="130dp"
            android:layout_marginBottom="40dp"
            android:layout_weight="0.28" >

            <TableRow android:gravity="center" >

                <TextView
                    style="@style/table_text_account"
                    android:text="@string/globalRanking" />

                <TextView
                    android:id="@+id/globalRanking"
                    style="@style/table_text_account"
                    android:gravity="right" />
            </TableRow>

            <TableRow android:gravity="center" >

                <TextView
                    style="@style/table_text_account"
                    android:text="@string/playedGames" />

                <TextView
                    android:id="@+id/playedGames"
                    style="@style/table_text_account"
                    android:gravity="right" />
            </TableRow>

            <TableRow android:gravity="center" >

                <TextView
                    style="@style/table_text_account"
                    android:text="@string/wonGames" />

                <TextView
                    android:id="@+id/wonGames"
                    style="@style/table_text_account"
                    android:gravity="right" />
            </TableRow>

            <TableRow android:gravity="center" >

                <TextView
                    style="@style/table_text_account"
                    android:text="@string/lostGames" />

                <TextView
                    android:id="@+id/lostGames"
                    style="@style/table_text_account"
                    android:gravity="right" />
            </TableRow>

            <TableRow android:gravity="center" >

                <TextView
                    style="@style/table_text_account"
                    android:text="@string/drawGames" />

                <TextView
                    android:id="@+id/drawGames"
                    style="@style/table_text_account"
                    android:gravity="right" />
            </TableRow>
        </TableLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout1"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/gameInstructions"
            style="@style/button_style"
            android:layout_marginRight="5dp"
            android:layout_weight="0.5"
            android:onClick="onClickGameInstructions"
            android:text="@string/instructions" />

        <Button
            android:id="@+id/logout"
            style="@style/button_style"
            android:layout_marginLeft="5dp"
            android:layout_weight="0.5"
            android:onClick="onClickLogout"
            android:text="@string/logout" />
    </LinearLayout>

</RelativeLayout>