<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dip" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal" >

                <!-- View Title Label -->

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginRight="15dp"
                    android:text="@string/register"
                    android:textColor="@color/White"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <!-- Error message -->

                <TextView
                    android:id="@+id/register_error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/Red"
                    android:textStyle="bold" />
            </LinearLayout>

            <!-- Name TextField -->

            <EditText
                android:id="@+id/registerName"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:drawableRight="@drawable/social_person"
                android:hint="@string/username"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:singleLine="true" >

                <requestFocus />
            </EditText>

            <!-- Email TextField -->

            <EditText
                android:id="@+id/registerEmail"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:drawableRight="@drawable/content_email"
                android:hint="@string/email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:singleLine="true" >
            </EditText>

            <!-- Password TextField -->

            <EditText
                android:id="@+id/registerPassword"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:drawableRight="@drawable/new_password"
                android:hint="@string/password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:singleLine="true" />

            <!-- Repeat password TextField -->

            <EditText
                android:id="@+id/registerRepeatPassword"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:drawableRight="@drawable/new_password"
                android:hint="@string/repeat_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:singleLine="true" />

            <!-- Link to Login Screen -->

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:background="@drawable/btn_default_normal"
                android:onClick="onClickRegister"
                android:text="@string/register"
                android:textColor="@color/White" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:clickable="false" />
    </RelativeLayout>

</ScrollView>