<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:padding="10dp" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal" >

                <!-- View Title Label -->

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/login"
					android:textAppearance="@style/text_large"
                    android:textStyle="bold" />
            </LinearLayout>

            <!-- username TextField -->

            <EditText
                android:id="@+id/login_username"
                style="@style/edit_text_style_username"
                android:layout_marginBottom="5dp"
                android:nextFocusDown="@+id/login_password" >

                <requestFocus />
            </EditText>

            <!-- Password TextField -->

            <EditText
                android:id="@+id/login_password"
                style="@style/edit_text_style_password"
                android:imeActionLabel="Done"
                android:imeOptions="actionDone"/>

            <!-- Login Button -->

            <Button
                android:id="@+id/btnLogin"
                style="@style/button_style"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:onClick="onClickLogin"
                android:text="@string/login"
                android:textStyle="bold"  />

            <!-- Link to Forgot Password Screen -->

            <Button
                android:id="@+id/btnForgotPassword"
                style="@style/button_style"
                android:onClick="onClickForgotPassword"
                android:layout_marginBottom="5dp"
                android:text="@string/forgot_password"
                android:textStyle="bold" />

            <!-- Link to Registration Screen -->

            <Button
                android:id="@+id/btnLinkToRegisterScreen"
                style="@style/button_style"
                android:onClick="onClickRegister"
                android:text="@string/not_registered"
                android:textStyle="bold" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:clickable="false" />
    </RelativeLayout>

</ScrollView>